<resources>
    <string name="app_name">SML</string>
    <string name="recycler_view_item_index">index</string>
    <string name="recycler_view_item_button">Button</string>
    <string name="recycler_view_item_arrow_descriptor">recycler_view_item_arrow_descriptor</string>
    <string name="shape_to_fill">shape_to_fill</string>
    <string name="main_settings_text">Settings</string>
    <string name="arrow_descriptor">arrow_descriptor</string>
    <string name="selected_item_view_text">index of selected item</string>
    <string name="settings_view_row_txt">Row</string>
    <string name="settings_view_degree_fill_txt">% (0..1)</string>
    <string name="settings_view_button_txt">Ok</string>
</resources>
