<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/recycler_view_item_index"
        android:layout_width="0dp"
        android:layout_weight="0.4"
        android:layout_height="wrap_content"
        android:text="@string/recycler_view_item_index"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:padding="16dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="end|center_vertical">

        <Button
            android:id="@+id/recycler_view_item_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/recycler_view_item_button"
            android:background="@drawable/button_selector"
            android:textColor="@android:color/white"
            android:visibility="visible" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/recycler_view_item_arrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:contentDescription="@string/recycler_view_item_arrow_descriptor"
        android:src="@drawable/arrow" />


</LinearLayout>